--- a/ModularEshopApi/.gitignore
+++ b/ModularEshopApi/.gitignore
@@ -247,6 +247,7 @@ ClientBin/
 *.jfm
 *.pfx
 *.publishsettings
+appsettings.Development.json
 orleans.codegen.cs
 
 # Including strong name files can present a security risk
