--- a/ModularEshopApi/appsettings.Development.json
+++ b/ModularEshopApi/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+    "Nets": {
+    "SecretKey": "89ad37a507d94755bb27d75a16969b3f",
+    "CheckoutKey": "ecc49f0bb4e44ffcb088137c1c0bcba5"
   }
 }
